--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
-    "electron": "^30.0.0",
+    "electron": "^30.0.1",
     "electron-builder": "^24.13.3",
-    "typescript": "^5.4.5",
+    "jsonpath-plus": "^8.1.0",
+    "sass": "^1.75.0",
     "vite": "^5.2.9",
-    "vite-plugin-electron": "^0.28.4",
-    "vite-plugin-electron-renderer": "^0.14.5",
-    "vue-tsc": "^2.0.13"
+    "vite-plugin-electron": "^0.28.5",
+    "vite-plugin-electron-renderer": "^0.14.5"
   },
   "main": "dist-electron/main.js"
 }
