--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.23"
+    "vue": "^3.4.23",
+    "yaml": "^2.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.19",
     "electron": "^30.0.1",
     "electron-builder": "^24.13.3",
     "jsonpath-plus": "^8.1.0",
+    "postcss": "^8.4.38",
     "sass": "^1.75.0",
-    "vite": "^5.2.9",
-    "vite-plugin-electron": "^0.28.5",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.10",
+    "vite-plugin-electron": "^0.28.6",
     "vite-plugin-electron-renderer": "^0.14.5"
   },
   "main": "dist-electron/main.js"
